Story #12584: reformat code with spotless